--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 				</footer>
 			</div>
-			<a href="#one" class="button style2 down" style="
+			<a href="#five" class="button style2 down" style="
 				position: fixed;
 				bottom: 10px;
 				left: 50%;
