--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
 			<div class="content ">
 				<header>
 					<div class="text_sec1">
-						<h2 style="position: relative;
-					font-size: 5em;"><span style="color: #be694b;">YOUR<br>
+						<h2 class="title-intro"><span style="color: #be694b;">YOUR<br>
 								LIFE</span> IN<br>
 							FOCUS
 						</h2>
 						<p class="parag1" style="color: #0b1b30;"> <Span style="color: #be694b;">
-								STUDIO, 1, 1 & DEN, 2, 2 & DEN<br></Span>
-							IN LANGLEY CITY, MINUTES TO
-							THE NEW SKYTRAIN </p>
+								STUDIO, 1, 1 & DEN, 2, 2 & DEN<br>
+							</Span>IN LANGLEY CITY, MINUTES TO THE NEW SKYTRAIN</p>
 						<p style="font-size: 1.3em;font-family: 'Beliau';color: black;">
 							COMING SOON 2024
 						</p>
@@ -233,13 +231,13 @@
 
 		</section> -->
 
-		<section id="nine" class="main  right dark fullscreen split-section section-nap-scroll">
+		<section id="nine" class="main  right dark fullscreen split-section ">
 
 
 			<div class="left-half">
 
 			</div>
-			<div class="right-half">
+			<div class="right-half section-nap-scroll">
 				<h4>REGISTER TODAY</h4>
 				<p class="parag3">Make Scale by Scale Projects in Langley your home. Register with our
 					team and we will contact you shortly to provide more infomation. </p>
@@ -294,7 +292,7 @@
 						<label for="checkbox-phone" style="padding-right: 1em;padding-left: 0.3em;">Phone</label>
 
 						<input type="checkbox" id="email" name="contact-method" value="E-mail">
-						<label for="email" style="padding-right: 1em;padding-left: 0.3em;">E-mail</label>
+						<label for="email" style="width: 8em; padding-right: 1em;padding-left: 0.3em;">E-mail</label>
 
 						<input type="checkbox" id="text" name="contact-method" value="Text">
 						<label for="text" style="padding-right: 1em;padding-left: 0.3em;">Text</label>
@@ -305,6 +303,7 @@
 								href="javascript:void(0)" onclick="openPrivacyModal()">terms</a></label>
 						<input type="checkbox" id="norobot" name="verifyRobot" value="yes">
 						<label for="norobot" style="padding-right: 1em;padding-left: 0.3em;">I’m not a robot</label>
+						<!-- <div class="g-recaptcha" data-sitekey="6Le-BxkpAAAAAGNxPPFb68Ik08XiKPVt0LguaOmT"></div> -->
 					</div>
 
 					<div style="display: flex;">
@@ -517,6 +516,7 @@
 		<!-- <script src="assets/js/util.js"></script> -->
 		<script src="assets/js/main.js"></script>
 	</div>
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </body>
 
 
