--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@
 
 							<img src="images/CheckGree.png" alt="OK-Check" class="OK-Check" />
 							<h3>
-								YOUR SUBMISSION HAS BEEN RECEIVED. WE'LL BE IN TOUCH SOON!
+								Thank you for your interest in scale by Scale Projects. One of our Sales Representatives
+								will be in touch shortly to discuss your how Scale can be your perfect home for every
+								day comfort.
 							</h3>
 						</div>
 					</div>
