--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							FOCUS
 						</h2>
 						<p class="parag1" style="color: #0b1b30;"> <Span style="color: #be694b;">
-								STUDIO, 1, 1 & DEN, 2, 2 & DEN<br>
+								STUDIO, 1, 1 & FLEX, 2, 2 & FLEX<br>
 							</Span>IN LANGLEY CITY, MINUTES TO THE NEW SKYTRAIN</p>
 						<p style="font-size: 1.3em;font-family: 'Beliau';color: black;">
 							COMING SOON 2024
@@ -139,8 +139,7 @@
 				<p class="about quiet3">Every building offers something different. At Scale by Scale
 					Projects it was about designing practical spaces versus
 					spaces that nobody would use.<br>
-					Take a look at the list of amenities at Scale that will build
-					a community of neighbours.</p>
+				</p>
 			</div>
 		</section>
 
@@ -163,7 +162,9 @@
 					WHERE UPSIDE HAS NO CEILING.</h3>
 				<p class="about quiet3">A neighbourhood with amenities just a few blocks away,
 					the future skytrain within walking distance and endless hidden
-					gems to discover in Langley's ever growing community.</p>
+					gems to discover in Langley's ever growing community. <br>
+					Located near 54A Avenue and 203 Street, be one of the first to invest in a
+					community that will transform before your eyes. Register Today! </p>
 			</div>
 		</section>
 
