--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Scali Projects</title>
+	<title>Scale Projects</title>
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/responsive.css" />
 	<noscript>
@@ -445,13 +445,13 @@
 			</div>
 		</section> -->
 
-		<!-- <footer id="footer" class="section-nap-scroll">
+		<footer id="footer" class="section-nap-scroll">
 
 			<div class="side-l">
 				<div class="menu-footer">
-					<a href="#intro">PROJECTS</a>
-					<a href="#two">CONTACT</a>
-					<a href="#one">ABOUT</a>
+					<!-- <a href="#intro">PROJECTS</a> -->
+					<!-- <a href="#two">CONTACT</a>
+					<a href="#one">ABOUT</a> -->
 				</div>
 				<p class="privacy">
 					Copyright &copy; 2023 Scale Projects
@@ -491,16 +491,16 @@
 			<div class="side-r">
 				<img src="images/logo.png" alt="Logo 1" class="logo logodown">
 
-				
-				 <ul class="icons">
 
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands fa-youtube-in"><span class="label">YouTube</span></a></li>
+				<ul class="icons">
 
-			</ul> 
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands fa-youtube-in"><span class="label">YouTube</span></a></li>
 
-				
+				</ul>
+
+
 				<div class="container-icons">
 					<a href="#" target="_blank">
 						<img src="images/icon_fb.png" alt="IconFB">
@@ -531,7 +531,7 @@
 
 			</div>
 
-		</footer>  -->
+		</footer>
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
