--- a/public/index.html
+++ b/public/index.html
@@ -539,14 +539,14 @@
 				</div> -->
 
 
-				<p class="adress"><span style="color: #96a3b7;left: 13%;position: relative;">
-						Presentation Centre Coming Soon!</span><br><br>
+				<p class="adress">
+					Presentation Centre Coming Soon!
 					<!-- <span style="color: #ffffff;">
 					</span><br><br>
 
 					live@scalegroup.ca -->
 				</p>
-				<a href="#intro"><img src="images/logo2.png" alt="logo2" class="logo2 logo2down"></a>
+				<a href="#intro"><img src="images/logo2.png" alt="logo2" class="logo2down"></a>
 
 
 			</div>
