--- a/public/scali.html
+++ b/public/scali.html
@@ -40,7 +40,7 @@
             <nav>
                 <ul>
                     <li><a href="#four">PROJECTS</a></li>
-                    <li><a href="#one">NEIGHBOURHOOD</a></li>
+                    <li><a href="#four">NEIGHBOURHOOD</a></li>
 
                 </ul>
             </nav>
@@ -48,7 +48,7 @@
         <div class="header-logo-r"
             style="display: flex;flex-direction: row;justify-content: flex-start;align-items: center;width: 21%;">
             <img src="images/S.png" alt="Logo 1" class="logo" />
-            <a href="#tree">
+            <a href="#nine">
                 <button class="button">REGISTER</button>
             </a>
 
@@ -80,7 +80,7 @@
 
                 </footer>
             </div>
-            <a href="#five" class="arrowdow button style2 down ">More</a>
+            <a href="#one" class="arrowdow button style2 down ">More</a>
         </section>
 
         <section id="one" class="main style2 right dark fullscreen section-nap-scroll">
@@ -97,7 +97,7 @@
                     of relief washes over you.<br>
                     Your home is your haven, where the mishaps of the day melt away into jokes
                     you’ll laugh about later.<br></p>
-                <a href="#tree">
+                <a href="#nine">
                     <button class=" register">REGISTER NOW</button>
                 </a>
             </div>
@@ -135,7 +135,8 @@
         <section id="four" class="main  right dark fullscreen split-section-horizon section-nap-scroll">
             <div id="menu">
                 <h3 style="margin-bottom: 1em; color: #263239; margin-left: 0; text-align: left;">LOCATION</h3>
-                <a href=" #" onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALE_MAP_FULL.jpg');">FULL</a>
+                <a href=" #"
+                    onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALE_MAP_FULL.jpg');">NEIGHBOURHOOD</a>
                 <a class="" href="#"
                     onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_06_RESTAURANTES.png');">RESTAURANTS</a>
                 <a href="#"
@@ -191,7 +192,8 @@
                     from Disneyland, home is the
                     comfort of your soul.</p>
                 <img src="images/bags_family.png" alt="bags_family" class="bags_family">
-                <button class="button7">REGISTER TODAY</button>
+                <a href="#nine">
+                    <button class="button7">REGISTER TODAY</button></a>
             </div>
         </section>
 
