--- a/public/scali.html
+++ b/public/scali.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/main1.css" />
     <link rel="stylesheet" href="assets/css/responsive1.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/S-favIcon.png">
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
@@ -134,7 +135,8 @@
 
         <section id="four" class="main  right dark fullscreen split-section-horizon section-nap-scroll">
             <div id="menu">
-                <h3 style="margin-bottom: 1em; color: #263239; margin-left: 0; text-align: left;">LOCATION</h3>
+                <h3 class="location">
+                    LOCATION</h3>
                 <a href=" #"
                     onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALE_MAP_FULL.jpg');">NEIGHBOURHOOD</a>
                 <a class="" href="#"
