add-information-update

--- a/public/index.html
+++ b/public/index.html
@@ -459,6 +459,10 @@
 					<!-- <a href="#two">CONTACT</a>
 					<a href="#one">ABOUT</a> -->
 				</div>
+				<p class="updates"> <img src="images/i.png" alt="exclam" class="exclaim"> Continue to visit our website
+					as we add further
+					information and provide additional updates in the
+					upcoming weeks about our Scale project.</p>
 				<p class="privacy">
 					Copyright &copy; 2023 Scale Projects
 					<a href="javascript:void(0)" style="margin-left: 10px; border-bottom: solid 1px;"
@@ -509,6 +513,7 @@
 							class="logo-fifth"></a>
 				</div>
 			</div>
+
 
 
 			<div class="side-r">
