--- a/public/index.html
+++ b/public/index.html
@@ -465,7 +465,8 @@
 					upcoming weeks about our Scale project.</p>
 				<p class="privacy">
 					Copyright &copy; 2023 Scale Projects
-					<a href="javascript:void(0)" style="margin-left: 10px; border-bottom: solid 1px;"
+					<a href="javascript:void(0)"
+						style="margin-left: 10px; border-bottom: solid 1px;white-space: nowrap;"
 						onclick="openPrivacyModal2()">Privacy
 						Policy</a>
 				</p>
